UtahLiveDataTest/src/objects/FEDBudgetBatch__c.object
<CustomObject>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplicationApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FEDBudgetBatchs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AttachmentURL__c</fullName>
        <label>AttachmentURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BatchApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FEDBudgetBatchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BatchId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BatchId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalFileName__c</fullName>
        <label>External File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_File_Name__c</fullName>
        <label>External File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fical_Year__c</fullName>
        <label>Fical Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Ficsal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Processing  Approve</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FED</fullName>
                </value>
                <value>
                    <fullName>StateFormula</fullName>
                </value>
                <value>
                    <fullName>App12</fullName>
                </value>
                <value>
                    <fullName>LumsumpApp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FEDBudgetBatch</label>
    <nameField>
        <label>FEDBudgetBatch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEDBudgetBatchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>